Fixed for booking additional hour issue on allowing to book with additional hour overlapping a taken slot

--- a/app/webroot/css/activity/activity.css
+++ b/app/webroot/css/activity/activity.css
@@ -17,3 +17,7 @@ section.activity-section.details {
 .calculator-output p {
     margin: 0;
 }
+
+#errorMessage {
+    font-size: 14px;
+}
